# skill-search

./: .gitignore  README.md  generate_overrides.py  pyproject.toml  server.py
.github/workflows/: test.yml
eval/: run_eval.py
scripts/: measure_tokens.py
tests/: test_cli.py  test_discovery.py  test_indexing.py  test_overrides.py
